[package]
name = "chip8-emu"
version = "0.1.0"
authors = ["ryskov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.18"
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }